[gd_scene load_steps=3 format=3 uid="uid://bm87rgrj6ohlm"]

[ext_resource type="PackedScene" uid="uid://cg1wr413xve2x" path="res://Scenes/WitchSpawn.tscn" id="1_65ub3"]
[ext_resource type="Script" uid="uid://b38cjvdkn1053" path="res://Scripts/witch_manager.gd" id="1_jmlvr"]

[node name="WitchManager" type="Node2D"]
script = ExtResource("1_jmlvr")

[node name="WitchSpawn1" parent="." instance=ExtResource("1_65ub3")]

[node name="WitchSpawn2" parent="." instance=ExtResource("1_65ub3")]
position = Vector2(50, 0)

[node name="WitchSpawn3" parent="." instance=ExtResource("1_65ub3")]
position = Vector2(0, 50)

[node name="WitchSpawn4" parent="." instance=ExtResource("1_65ub3")]
position = Vector2(50, 50)

[node name="WitchSpawn5" parent="." instance=ExtResource("1_65ub3")]
position = Vector2(0, 100)

[node name="WitchSpawn6" parent="." instance=ExtResource("1_65ub3")]
position = Vector2(50, 100)

[node name="WitchSpawn7" parent="." instance=ExtResource("1_65ub3")]
position = Vector2(100, 50)

[node name="WitchSpawn8" parent="." instance=ExtResource("1_65ub3")]
position = Vector2(100, 0)

[node name="WitchSpawn9" parent="." instance=ExtResource("1_65ub3")]
position = Vector2(100, 100)
